# Lox-Compiler

./: .gitignore  CMakeLists.txt  Doxyfile  README  driver.c  main.c
docs/: PARSER.md
docs/html/: HashSet_8c.html  HashSet_8c__incl.dot  HashSet_8h.html  HashSet_8h__dep__incl.dot  HashSet_8h__incl.dot  HashSet_8h_source.html  annotated.html  classes.html  dir_000001_000000.html  dir_572890c148f68441e050f6560d78312b.html  dir_cb836fcfc4cd05d6688b5407f9ff7db1.html  errors_8c.html  errors_8c__incl.dot  errors_8h.html  errors_8h__dep__incl.dot  errors_8h__incl.dot  errors_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  lexer_8h.html  lexer_8h__dep__incl.dot  lexer_8h_source.html  menudata.js  nodes_8h.html  nodes_8h_source.html  parser_8c.html  parser_8c__incl.dot  parser_8h.html  parser_8h__dep__incl.dot  parser_8h__incl.dot  parser_8h_source.html  rules_8l.html  (+7 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_1.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js  typedefs_0.js  (+8 more)
docs/latex/: HashSet_8c.tex  HashSet_8c.tex.tmp  HashSet_8c__incl.dot  HashSet_8h.tex  HashSet_8h__dep__incl.dot  HashSet_8h__incl.dot  HashSet_8h_source.tex  annotated.tex  dir_572890c148f68441e050f6560d78312b.tex  dir_572890c148f68441e050f6560d78312b_dep.dot  dir_cb836fcfc4cd05d6688b5407f9ff7db1.tex  errors_8c.tex  errors_8c__incl.dot  errors_8h.tex  errors_8h__dep__incl.dot  errors_8h__incl.dot  errors_8h_source.tex  files.tex  lexer_8h.tex  lexer_8h__dep__incl.dot  lexer_8h_source.tex  nodes_8h.tex  nodes_8h_source.tex  parser_8c.tex  parser_8c__incl.dot  parser_8h.tex  parser_8h__dep__incl.dot  parser_8h__incl.dot  parser_8h_source.tex  refman.tex  rules_8l.tex  rules_8l__incl.dot  structHashSet.tex  structHashSet.tex.tmp  structHashSet__coll__graph.dot  structNode.tex  structNode__coll__graph.dot
lexer/: CMakeLists.txt  driver.c  lexer.h  rules.l  token.h
parser/: CMakeLists.txt  HashSet.c  HashSet.h  errors.c  errors.h  nodes.h  parser.c  parser.h
test/files/: allLexmeTest.txt
test/parser/: fooProgram.txt  program.txt
